2000-03-06  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/main.cc (class clock_app): Remove members edit_options and
	dialog.  Add new member show_options_dialog.
	(edit_options): Removed.
	(handle_options_command): New function.
	(create_window): Use handle_options_command for menu.
	(clock_app): Remove initialization of the removed member.

	* lib/glclock.cc (show_options_dialog): New function.
	(glclock): Initialize options.

	* include/glclock.h (class about_dialog): Removed.
	(class clock_options_dialog): Moved before class glclock.
	(class glclock): Add new member show_options_dialog.
	(class glclock): Add new member options.

	* lib/about.cc: Removed.

	* lib/Makefile.am (libclock_a_SOURCES): Remove about.cc.

	* lib/simple.c: Modify the material parameters.
	(simple_init): Set the ambient parameters for lights.

2000-03-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/Makefile.am (EXTRA_DIST): Add options-0.dtd.

	* NEWS: Updated.

	* bin/main.cc (show_about_dialog): Remove _() for version_format.

	* configure.in (ALL_LINGUAS): Changed.

	* bin/main.cc (PROGRAM, COPYRIGHT_YEAR): New macros.
	(class clock_app): Remove members describe and ad.  Add new
	members main_window and show_about_dialog.
	(handle_about_ok_clicked): New function.
	(show_about_dialog): New function.
	(describe): Removed.
	(handle_about_command): New function.
	(create_window): Create window only if not created yet.
	(clock_app): Initialize main_window.
	(edit_options): Cast data to clock_app*.
	(show_about_dialog): Show the dialog at the end.
	(create_window): Add box1 to the main window first.
	(show_about_dialog): Add cleanup for exceptions.

	* lib/glclock.cc (update): Rotate only if there is a context.

1999-12-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/main.cc (class clock_app): Moved out of unnamed namespace.
	(class clock_app): Add static variables for options.
	(namespace): Remove options variable moved to class clock_app.