@@ -1,5 +1,7 @@
 ## Process this file with automake to produce a Makefile.in.
 
+include_HEADERS = rglclockmod.h
+
 noinst_HEADERS = gdkgl.h autowidget.h utils.h \
 module.h glclock.h
 
